--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,7 +18,7 @@ traefik_custom_config: []
 traefik_dashboard: true
 traefik_dashboard_middlewares: auth-basic@file
 traefik_dashboard_user: admin
-traefik_dashboard_pass: $apr1$MR6nE9XC$lC2fnUmGLmsZDGqNlcdxU0    # 'admin'
+traefik_dashboard_pass: admin
 traefik_data: /opt/traefik
 traefik_env: { }
 traefik_fqdn: "{{ ansible_fqdn }}"
@@ -34,6 +34,7 @@ traefik_log_level: INFO
 traefik_log_format: common    # or json
 traefik_port: 80
 traefik_port_ssl: 443
+traefik_salt: "{{ ansible_machine_id[0:21] + '.' }}"
 traefik_send_usage: false
 traefik_user: traefik
 traefik_version: "2.10.1"
