--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -50,7 +50,9 @@ traefik_default_config:
       tls:
         options:
           default:
-            minVersion: VersionTLS12
+            curvePreferences:
+              - CurveP521
+              - CurveP384
             cipherSuites:
               # Recommended ciphers for TLSv1.2
               - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
@@ -60,13 +62,17 @@ traefik_default_config:
               - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
               - TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256
               - TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305
+            minVersion: VersionTLS12
 
           # Use with traefik.http.routers.<name>.tls.options=strict@file"
           strict:
-            minVersion: VersionTLS13
+            curvePreferences:
+              - CurveP521
+              - CurveP384
             cipherSuites:
               - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
               - TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305
+            minVersion: VersionTLS13
             sniStrict: true
 traefik_dashboard: true
 traefik_dashboard_middlewares:
