--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,15 +2,13 @@
 traefik_acme: false
 traefik_acme_email: ""
 traefik_acme_server: ""
-traefik_acme_domains:
-  - main: "{{ traefik_fqdn }}"
 traefik_acme_challenge: http  # possible values: dns, tls, http
 traefik_acme_dns_provider: ""
 traefik_acme_dns_resolvers:
   - "8.8.8.8:53"
   - "1.1.1.1:53"
 traefik_acme_dns_disablepropagationcheck: false
-traefik_api_insecure: false
+traefik_additional_resolvers: []
 traefik_check_new_version: true
 traefik_custom_config: []
 # - name: remote1
@@ -75,16 +73,12 @@ traefik_default_config:
             minVersion: VersionTLS13
             sniStrict: true
 traefik_dashboard: true
-traefik_dashboard_middlewares:
-  - dashboard-auth-basic@file
-  - dashboard-rate-limit@file
-  - dashboard-secure-headers@file
-traefik_dashboard_fqdn: "{{ ansible_fqdn }}"
+traefik_dashboard_fqdn: ""
+traefik_dashboard_insecure: false
 traefik_dashboard_pass: admin
 traefik_dashboard_user: admin
 traefik_data: /opt/traefik
 traefik_env: { }
-traefik_fqdn: "{{ ansible_fqdn }}"
 traefik_group: traefik
 traefik_headers_browser_xss_filter: true    # X-XSS-Protection=1; mode=block
 traefik_headers_content_type_nosniff: true    # X-Content-Type-Options=nosniff
@@ -101,7 +95,9 @@ traefik_headers_sts_preload: true
 traefik_headers_sts_seconds: 63072000
 traefik_https: false
 traefik_https_redirect: false
+traefik_https_skipVerify: false
 traefik_image: traefik
+traefik_imagetag: "2.10.4"
 traefik_name: traefik
 traefik_docker_default_expose: false
 traefik_docker_network: bridge
@@ -113,4 +109,3 @@ traefik_port_ssl: 443
 traefik_salt: "{{ ansible_machine_id[0:21] + '.' }}"
 traefik_send_usage: false
 traefik_user: traefik
-traefik_version: "2.10.4"
