--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,17 +10,10 @@ galaxy_info:
     - dcjulian29
     - proxy
   license: Apache-2.0
-  min_ansible_version: 2.14.1
+  min_ansible_version: "2.16.7"
   namespace: dcjulian29
   platforms:
     - name: Debian
       versions:
-        - bullseye
-    - name: Ubuntu
-      versions:
-        - jammy
-    - name: EL
-      versions:
-        - "9"
-        - "8"
+        - bookworm
   role_name: traefik
